--- a/.env.development
+++ b/.env.development
@@ -1,11 +1,11 @@
-REACT_APP_CHAIN_ID = "56"
+REACT_APP_CHAIN_ID = "4002"
 
 # 10+ nodes balanced, US/EU
-REACT_APP_NODE_1 = "https://bsc-dataseed.binance.org"
+REACT_APP_NODE_1 = "https://rpc.testnet.fantom.network"
 
 # 10+ nodes balanced, US/EU
-REACT_APP_NODE_2 = "https://bsc-dataseed.binance.org"
+REACT_APP_NODE_2 = "https://rpc.testnet.fantom.network"
 
 # 10+ nodes balanced in each region, global
-REACT_APP_NODE_3 = "https://bsc-dataseed.binance.org"
+REACT_APP_NODE_3 = "https://rpc.testnet.fantom.network"
 
