--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     ]
   },
   "dependencies": {
-    "@binance-chain/bsc-use-wallet": "^0.8.1",
     "@crowdin/crowdin-api-client": "^1.10.1",
     "@ethersproject/abi": "^5.0.7",
     "@pancakeswap-libs/uikit": "Draugr-Swap/draugr-uikit",
@@ -49,6 +48,7 @@
     "styled-components": "^5.1.1",
     "typescript": "^4.1.3",
     "universal-cookie": "^4.0.4",
+    "use-wallet": "^0.13.4",
     "web3": "^1.3.1"
   },
   "devDependencies": {
