--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "react-twitter-widgets": "^1.9.5",
+    "remove-trailing-separator": "^1.1.0",
     "styled-components": "^5.1.1",
     "typescript": "^4.1.3",
     "universal-cookie": "^4.0.4",
