--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "styled-components": "^5.1.1",
     "typescript": "^4.1.3",
     "universal-cookie": "^4.0.4",
-    "use-wallet": "^0.13.4",
+    "draugr-use-wallet": "^1.0.1",
     "web3": "^1.3.1"
   },
   "devDependencies": {
