--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-REACT_APP_CHAIN_ID = "4002"
+REACT_APP_CHAIN_ID = 4002
 
 # 10+ nodes balanced, US/EU
 REACT_APP_NODE_1 = "https://rpc.testnet.fantom.network"
