--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,7 @@
     "radix": 0,
     "import/no-extraneous-dependencies": 0,
     "react/require-default-props": 0,
+    "react/no-unused-prop-types": 0,
     "react/default-props-match-prop-types": 0
     // End temporary rules
   }
